# circle

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
src/app/: MainWindow.cpp  MainWindow.h
src/domain/: Address.h  Alias.h  BirthYear.h  ChangeRecord.h  Gender.h  Person.h  Relationship.h  RelationshipGraph.cpp  RelationshipGraph.h  RelationshipMetadata.h  RelationshipStrength.h  Religion.h  SexualOrientation.h  ThreatInfo.h
src/persistence/: GraphSerializer.cpp  GraphSerializer.h  JsonConverters.h
src/query/: GraphQueries.cpp  GraphQueries.h
